<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.echo.GetUrl$PlaceholderFragment" >
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/grey"
	    android:orientation="vertical" >
		<LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/grey"
		     android:orientation="vertical" >
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/name1" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_name1" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_num1" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/desc1" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/loc1" />
		    <Button
		        android:id="@+id/buttonLoadPicture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0"
		        android:text="See Picture"/>
		    
		  </LinearLayout>
		  
		  <LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		     android:orientation="vertical" >
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/name2" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_name2" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_num2" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/desc2" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/loc2" />
		    <Button
		        android:id="@+id/buttonLoadPicture2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0"
		        android:text="See Picture"/>
		 
		  </LinearLayout>
		  
		  <LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background = "@color/grey"
		     android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/name3" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_name3" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/class_num3" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/desc3" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/loc3" />
		    <Button
		        android:id="@+id/buttonLoadPicture3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0"
		        android:text="See Picture"/>
		   
		  </LinearLayout>
	</LinearLayout>

</ScrollView>
