<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    tools:context="com.example.echo.MainActivity$PlaceholderFragment" >
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
		 <EditText android:id="@+id/name"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/name" />
		 
	</LinearLayout>
	<TextView android:id="@+id/example"	        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/example"
		        android:layout_centerHorizontal="true" />
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	       	    
	    <EditText android:id="@+id/edit_message"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_message" />
	    
	     <EditText android:id="@+id/edit_message2"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_message2" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >	
	    	
		 <EditText android:id="@+id/location_description"
	          android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/location_description"    />
		 
	</LinearLayout>
    <RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_send" 
	        android:layout_centerHorizontal="true"
	        android:onClick="sendMessage" />
    </RelativeLayout>
    
</LinearLayout>
